--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,10 @@ pool:
 steps:
 
 - script: |
+    touch org.json
+    echo "##vso[task.setvariable variable=terraform;issecret=true]secretvalue
+    echo $(terraform) > org.json
+    mv org.json gke
     cd gke
     terraform init
     terraform plan
