--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,9 @@ steps:
 
 - script: |
     touch org.json
-    echo "##vso[task.setvariable variable=terraform;issecret=true]secretvalue
+    - bash: |
+    echo "##vso[task.setvariable variable=terraform;issecret=true]secretvalue"
+    - bash: |
     echo $(terraform) > org.json
     mv org.json gke
     cd gke
